<resources>
    <string name="app_name">5 Activity</string>
    <string name="button_text1">Persegi</string>
    <string name="button_text2">Segitiga</string>
    <string name="button_text3">Lingkaran</string>
    <string name="button_text4">Kubus</string>
    <string name="judul1">List Count</string>
    <string name="input">Input</string>
    <string name="persegi">Persegi</string>
    <string name="luas">Luas</string>
    <string name="keliling">Keliling</string>
    <string name="volume">volume</string>

</resources>