<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Segitiga">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input"
        android:id="@+id/alas"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input"
        android:id="@+id/tinggi"
        android:layout_below="@+id/alas"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/luas"
        android:onClick="LuasSegitiga"
        android:id="@+id/luasSegitiga"
        android:layout_below="@+id/tinggi"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TVLuasSegitiga"
        android:layout_below="@id/luasSegitiga"
        android:textSize="20sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keliling"
        android:onClick="KelilingSegitiga"
        android:id="@+id/kelilingSegitiga"
        android:layout_below="@+id/TVLuasSegitiga"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TVKelilingSegitiga"
        android:layout_below="@id/kelilingSegitiga"
        android:textSize="20sp"/>
</RelativeLayout>