<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kubus">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input"
        android:id="@+id/rusuk"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/luas"
        android:onClick="LuasPermukaanKubus"
        android:id="@+id/luasKubus"
        android:layout_below="@+id/rusuk"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TVLuasKubus"
        android:layout_below="@id/luasKubus"
        android:textSize="20sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/luas"
        android:onClick="KelilingKubus"
        android:id="@+id/kelilingKubus"
        android:layout_below="@+id/TVLuasKubus"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TVKelilingKubus"
        android:layout_below="@id/kelilingKubus"
        android:textSize="20sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume"
        android:onClick="VolumeKubus"
        android:id="@+id/volumeKubus"
        android:layout_below="@+id/TVKelilingKubus"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TVVolumeKubus"
        android:layout_below="@id/volumeKubus"
        android:textSize="20sp"/>
</RelativeLayout>